feat(plugin): aotVerify, start-script guard and distTar wiring
aotVerify checks the jar manifest before starting anything, then starts the application under
-XX:AOTMode=on and counts how many of its classes came from the cache, the classes being those
enumerated from the jars in lib/. The start scripts add -XX:AOTCache only when the cache file
exists, so one script serves training, verification and production. distTar ships the cache;
distZip warns and does not, because zip cannot carry the mtime the JVM checks. Jar mtimes are
now pinned to Gradle's reproducible-tar constant instead of Jib's, so an unpacked tar matches
the cache without configuration.