@@ -1,7 +1,7 @@
 ---
 id: B-06
 title: "aotVerify: запуск с -XX:AOTMode=on, подсчёт источников классов, сверка манифеста — сборка падает с причиной"
-status: open
+status: done
 priority: P0
 size: M
 stage: stage-2-mvp
@@ -9,6 +9,18 @@ blocked_by: [B-05]
 ---
 
 # B-06 — `aotVerify`
+
+> **Сделано 06.09.2026.** `AotVerifyTask` + `LoadedClasses`. Порядок проверок: (3) манифест —
+> **до** запуска, дёшево и на любом JDK; (1) запуск скрипта с `JAVA_OPTS=-XX:AOTMode=on
+> -Xlog:class+load=info -Xlog:aot=info` до готовности или `exitAfter`, при отказе — строки `[aot]`
+> с error/warning из журнала в тексте ошибки; (2) доля классов приложения из кэша, где «классы
+> приложения» — перечень `.class` из jar-ов `lib/` (multi-release свёрнуты), а не догадка по
+> пакетам; hidden-классы лямбд в обе стороны не входят. Отчёт — `build/zavarnik/aotVerify.txt`;
+> `check` зависит от `aotVerify` при `verify.onCheck` (умолчание). Кэш и манифест — `@Internal`,
+> не `@InputFile`: отсутствие файла должно быть сообщением, а не ошибкой валидации Gradle.
+> Три TestKit-теста: зелёный путь через `check` (1 из 1 класса, 100 %), подменённый jar
+> (`fixture.jar: changed since aotTrain`, журнала запуска нет), отсутствие кэша. Случай
+> `--add-modules` (R8) — в B-08.
 
 Главная ценность плагина по брифу — не кэш, а красная сборка, когда кэш не будет принят.
 Ресёрч показал, что одного признака мало: по умолчанию JVM отвергает кэш **молча, с кодом 0**
@@ -32,6 +44,9 @@ blocked_by: [B-05]
 - AC: `jvmArgs("--add-modules", "jdk.httpserver")` только в `aotVerify` → красный с «Mismatched
   values for property jdk.module.addmods» (R8).
 - AC: `aotVerify` в `check` (умолчание) — сборка библиотеки без `application` не трогается.
-- Якоря: `experiments/aot-validation/run.sh` (R8, R9, R13–R16, функция `summ`),
+- Якоря: `zavarnik-gradle-plugin/src/main/kotlin/io/github/youndie/zavarnik/AotVerifyTask.kt`,
+  `zavarnik-gradle-plugin/src/main/kotlin/io/github/youndie/zavarnik/LoadedClasses.kt`,
+  `zavarnik-gradle-plugin/src/functionalTest/kotlin/io/github/youndie/zavarnik/AotVerifyFunctionalTest.kt`,
+  `experiments/aot-validation/run.sh` (R8, R9, R13–R16, функция `summ`),
   `experiments/aot-validation/results/2026-09-06-macos-aarch64-openjdk-25.0.2.log` (R14 с
   `exit=0` — почему одного кода мало), `docs/research/research-architecture.md` (§1.1, §1.2, D4).
